{
  "version": 4,
  "terraform_version": "1.1.7",
  "serial": 24,
  "lineage": "8ff4006a-a646-8fd9-ccdf-9ce9c16f6b05",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw_vpc10",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:514069481888:internet-gateway/igw-04b388ed03f425c0a",
            "id": "igw-04b388ed03f425c0a",
            "owner_id": "514069481888",
            "tags": {
              "Name": "igw_vpc10"
            },
            "tags_all": {
              "Name": "igw_vpc10"
            },
            "vpc_id": "vpc-0d5da9212bbaced20"
          },
          "dependencies": [
            "aws_vpc.vpc10"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "elb_ws",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:514069481888:loadbalancer/app/elb-ws/aef40fd6b290a3c1",
            "arn_suffix": "app/elb-ws/aef40fd6b290a3c1",
            "desync_mitigation_mode": "defensive",
            "dns_name": "elb-ws-2064445133.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:514069481888:loadbalancer/app/elb-ws/aef40fd6b290a3c1",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "elb-ws",
            "security_groups": [
              "sg-087d73e86f993c5d5"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-05079f3faccafd51a"
              },
              {
                "subnet_id": "subnet-0c0623ea635167ed5"
              }
            ],
            "subnets": [
              "subnet-05079f3faccafd51a",
              "subnet-0c0623ea635167ed5"
            ],
            "tags": {
              "Name": "elb_ws"
            },
            "tags_all": {
              "Name": "elb_ws"
            },
            "vpc_id": "vpc-0d5da9212bbaced20",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.vpc10_Security_Group_pub",
            "aws_subnet.sn_vpc10_pub_1a",
            "aws_subnet.sn_vpc10_pub_1c"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "elb_vpc10_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:514069481888:listener/app/elb-ws/aef40fd6b290a3c1/a3d22d0dc63a5ff5",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:514069481888:targetgroup/tg-vpc10-ws-nofity/b22b78d9e32ca2e2",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:514069481888:listener/app/elb-ws/aef40fd6b290a3c1/a3d22d0dc63a5ff5",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:514069481888:loadbalancer/app/elb-ws/aef40fd6b290a3c1",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.elb_ws",
            "aws_lb_target_group.tg_vpc10_ws_nofity",
            "aws_security_group.vpc10_Security_Group_pub",
            "aws_subnet.sn_vpc10_pub_1a",
            "aws_subnet.sn_vpc10_pub_1c",
            "aws_vpc.vpc10"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg_vpc10_ws_nofity",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:514069481888:targetgroup/tg-vpc10-ws-nofity/b22b78d9e32ca2e2",
            "arn_suffix": "targetgroup/tg-vpc10-ws-nofity/b22b78d9e32ca2e2",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:514069481888:targetgroup/tg-vpc10-ws-nofity/b22b78d9e32ca2e2",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tg-vpc10-ws-nofity",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "tg_vpc10_ws_nofity"
            },
            "tags_all": {
              "Name": "tg_vpc10_ws_nofity"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0d5da9212bbaced20"
          },
          "dependencies": [
            "aws_vpc.vpc10"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vpc10_route_table_priv",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:514069481888:route-table/rtb-02836d6cb90d2f3a5",
            "id": "rtb-02836d6cb90d2f3a5",
            "owner_id": "514069481888",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "vpc10 Route Table Public"
            },
            "tags_all": {
              "Name": "vpc10 Route Table Public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d5da9212bbaced20"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc10"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vpc10_route_table_pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:514069481888:route-table/rtb-044890d49d3a8dbf2",
            "id": "rtb-044890d49d3a8dbf2",
            "owner_id": "514069481888",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04b388ed03f425c0a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "vpc10 Route Table Public"
            },
            "tags_all": {
              "Name": "vpc10 Route Table Public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d5da9212bbaced20"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw_vpc10",
            "aws_vpc.vpc10"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "sn_association_1a_pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-049b87b7373338eb3",
            "route_table_id": "rtb-044890d49d3a8dbf2",
            "subnet_id": "subnet-05079f3faccafd51a"
          },
          "dependencies": [
            "aws_internet_gateway.igw_vpc10",
            "aws_route_table.vpc10_route_table_pub",
            "aws_subnet.sn_vpc10_pub_1a",
            "aws_vpc.vpc10"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "sn_association_1b_priv",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bd3f3d59dfcec620",
            "route_table_id": "rtb-02836d6cb90d2f3a5",
            "subnet_id": "subnet-034513857ecf28c39"
          },
          "dependencies": [
            "aws_route_table.vpc10_route_table_priv",
            "aws_subnet.sn_vpc10_priv_1a",
            "aws_vpc.vpc10"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "sn_association_1c_pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a3a875b0923a5169",
            "route_table_id": "rtb-044890d49d3a8dbf2",
            "subnet_id": "subnet-0c0623ea635167ed5"
          },
          "dependencies": [
            "aws_internet_gateway.igw_vpc10",
            "aws_route_table.vpc10_route_table_pub",
            "aws_subnet.sn_vpc10_pub_1c",
            "aws_vpc.vpc10"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "sn_association_1d_priv",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e01809fc24e0bf6a",
            "route_table_id": "rtb-02836d6cb90d2f3a5",
            "subnet_id": "subnet-0589c48244d291ae3"
          },
          "dependencies": [
            "aws_route_table.vpc10_route_table_priv",
            "aws_subnet.sn_vpc10_priv_1c",
            "aws_vpc.vpc10"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_priv",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:514069481888:security-group/sg-0d1346ff39d171660",
            "description": "Security Group private",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All to All",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d1346ff39d171660",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "All from 10.0.0.0/16",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "sg_priv",
            "name_prefix": "",
            "owner_id": "514069481888",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg_priv"
            },
            "tags_all": {
              "Name": "sg_priv"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d5da9212bbaced20"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc10"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc10_Security_Group_pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:514069481888:security-group/sg-087d73e86f993c5d5",
            "description": "vpc10 Security Group_pub",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All to All",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-087d73e86f993c5d5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": " Acesso HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": " Acesso SSH ",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "all traffic from 10.0.0.0/16",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "vpc10_Security_Group_pub",
            "name_prefix": "",
            "owner_id": "514069481888",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "vpc10 Security Group Pub"
            },
            "tags_all": {
              "Name": "vpc10 Security Group Pub"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d5da9212bbaced20"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc10"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn_vpc10_priv_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:514069481888:subnet/subnet-034513857ecf28c39",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-034513857ecf28c39",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "514069481888",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sn_vpc10_priv_1a"
            },
            "tags_all": {
              "Name": "sn_vpc10_priv_1a"
            },
            "vpc_id": "vpc-0d5da9212bbaced20"
          },
          "dependencies": [
            "aws_vpc.vpc10"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn_vpc10_priv_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:514069481888:subnet/subnet-0589c48244d291ae3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0589c48244d291ae3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "514069481888",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sn_vpc10_priv_1c"
            },
            "tags_all": {
              "Name": "sn_vpc10_priv_1c"
            },
            "vpc_id": "vpc-0d5da9212bbaced20"
          },
          "dependencies": [
            "aws_vpc.vpc10"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn_vpc10_pub_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:514069481888:subnet/subnet-05079f3faccafd51a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05079f3faccafd51a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "514069481888",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sn_vpc10_pub_1a"
            },
            "tags_all": {
              "Name": "sn_vpc10_pub_1a"
            },
            "vpc_id": "vpc-0d5da9212bbaced20"
          },
          "dependencies": [
            "aws_vpc.vpc10"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn_vpc10_pub_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:514069481888:subnet/subnet-0c0623ea635167ed5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c0623ea635167ed5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "514069481888",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sn_vpc10_pub_1c"
            },
            "tags_all": {
              "Name": "sn_vpc10_pub_1c"
            },
            "vpc_id": "vpc-0d5da9212bbaced20"
          },
          "dependencies": [
            "aws_vpc.vpc10"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc10",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:514069481888:vpc/vpc-0d5da9212bbaced20",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0fc87ef9683991d5e",
            "default_route_table_id": "rtb-0f984575a84ee28fe",
            "default_security_group_id": "sg-09308a639437bb024",
            "dhcp_options_id": "dopt-0ebedc977f072c89d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0d5da9212bbaced20",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f984575a84ee28fe",
            "owner_id": "514069481888",
            "tags": {
              "Name": "vpc10"
            },
            "tags_all": {
              "Name": "vpc10"
            }
          }
        }
      ]
    }
  ]
}